# tetra

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  Readme.md
.github/workflows/: check.yml  test.yml
benches/: benchmarks.rs
src/: decomposition.rs  faer.rs  lib.rs  mkl.rs  permutation.rs  random.rs  serde.rs  utils.rs
