[package]
name = "tetra"
version = "0.1.0"
edition = "2021"
description = "Fast complex tensor contractions"
keywords = ["tensor", "complex", "contraction"]
categories = ["mathematics", "science"]
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/Ectras/tetra"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "num-complex/serde"]
rand = ["dep:rand"]

[dependencies]
num-complex = { version = "0.4.6" }
hptt = { git = "https://github.com/Ectras/rust-hptt.git" }
lapack = "0.19.0"
itertools = "0.14.0"
permutation = "0.4.1"
serde = { version = "1.0.217", optional = true }
rand = { version = "0.9.0", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-ilp64-iomp"] }
cblas-sys = "0.1.4"
float-cmp = "0.10.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
serde_test = "1.0.176"

[[bench]]
name = "benchmarks"
harness = false
