[package]
name = "tetra"
version = "0.1.0"
edition = "2021"
description = "Fast complex tensor contractions"
keywords = ["tensor", "complex", "contraction"]
categories = ["mathematics", "science"]
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/Ectras/tetra"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "num-complex/serde"]
rand = ["dep:rand"]
mkl = ["dep:intel-mkl-src", "dep:cblas-sys"]

[dependencies]
num-complex = { version = "0.4.6" }
hptt = { git = "https://github.com/Ectras/rust-hptt.git" }
lapack = "0.20.0"
itertools = "0.14.0"
permutation = "0.4.1"
serde = { version = "1.0.217", optional = true }
rand = { version = "0.9.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-ilp64-iomp"], optional = true }
cblas-sys = { version = "0.3.0", optional = true }
float-cmp = "0.10.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
faer = "0.24.0"

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.2"
serde_test = "1.0.176"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
