[package]
name = "tetra"
version = "0.1.0"
edition = "2021"
description = "Fast complex tensor contractions"
keywords = ["tensor", "complex", "contraction"]
categories = ["mathematics", "science"]
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/Ectras/tetra"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "num-complex/serde"]
rand = ["dep:rand"]

[dependencies]
num-complex = { version = "0.4.6" }
itertools = "0.14.0"
permutation = "0.4.1"
serde = { version = "1.0.217", optional = true }
rand = { version = "0.9.4", optional = true }
float-cmp = "0.10.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
tblis = { git = "https://github.com/Ectras/rust-tblis" }

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.4"
serde_test = "1.0.176"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
